--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,11 +5,11 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Maven
+  - name: Build
     task:
       jobs:
         - name: Build
           commands:
             - checkout
             - sem-version java 1.8
-            - mvn -B package --file pom.xml
+            - mvn package
